--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,6 +12,7 @@ on:
       - main
 jobs:
   docker:
+    name: Build and push
     runs-on: ubuntu-latest
     steps:
       - name: Set up QEMU
@@ -27,6 +28,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
+          push: true
           tags: |
             ghcr.io/${{ github.repository }}:v0.0.0
             ghcr.io/${{ github.repository }}:v0.0
