--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -30,6 +30,6 @@ jobs:
         with:
           push: true
           tags: |
-            ghcr.io/${{ github.repository_name }}:v0.0.0
-            ghcr.io/${{ github.repository_name }}:v0.0
-            ghcr.io/${{ github.repository_name }}:v0
+            ghcr.io/${{ github.repository }}:v0.0.0
+            ghcr.io/${{ github.repository }}:v0.0
+            ghcr.io/${{ github.repository }}:v0
