--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,28 +6,5 @@ on:
     types:
       - published
 jobs:
-  docker:
-    name: Build and push
-    runs-on: ubuntu-latest
-    steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Login to GitHub Container registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Get versions
-        id: versions
-        uses: applicreation/versions-action@main
-      - name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          push: true
-          tags: |
-            ghcr.io/${{ github.repository }}:${{ steps.versions.outputs.patch }}
-            ghcr.io/${{ github.repository }}:${{ steps.versions.outputs.minor }}
-            ghcr.io/${{ github.repository }}:${{ steps.versions.outputs.major }}
+  docker-release:
+    uses: applicreation/github-workflows/.github/workflows/docker-release.yaml@main
